Refatoração de função

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "remessabanco",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Biblioteca para geração de arquivos de remessa de bancos no formato .txt e .rem",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "teste": "nodemon src/teste.js"
   },
   "author": "Elton Marques",
   "license": "ISC",
