--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ typings/
 .nuxt
 dist
 
+src/uploads/
+!src/uploads/.gitkeep
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
