--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "teste": "nodemon src/teste.js"
+    "dev": "nodemon --inspect src/index.js",
+    "teste": "nodemon --inspect src/teste.js"
   },
   "author": "Elton Marques",
   "license": "ISC",
